--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,5 +1,5 @@
 .header {
   @include gradientClip();
   @include typography(h2);
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.75rem;
 }
